--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
   {% include head.html %}
+  <body>
+    <div class="page-content">
+      <div class="container">
+        <div class="three columns">
+          {% include header.html %}
+        </div>
 
-<body>
-  {% include header.html %}
-
-  <section class="main-content">
-    {{ content }}
-      {% include footer.html %}
-  </section>
-
-</body>
+        <div class="nine columns" style="z-index:100;">
+          <div class="wrapper">
+            {{ content }}
+          </div>
+        </div>
+      </div>
+      {% include footer.html %} 
+    </div>
+  </body>
 </html>
