--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,208 +1,489 @@
-.color1 {
-    background: $blue;
+/* layout */
+html,.container {
+  position:relative;
+  min-height:100%;
 }
-.color2 {
-    background: $yellow;
-}
-.color3 {
-    background: white;
-}
-.color4 {
-    background: $green;
-}
-
-
-/*****************************************************************************/
-/*
-/* Basic
-/*
-/*****************************************************************************/
 
 body {
-    margin: 0;
-    font-family: $base-font-family;
-    font-size: $base-font-size;
-    background: $body-background;
-}
-a {
-    text-decoration: none;
-    -webkit-transition: color 0.25s ease-in, background 0.25s ease-in;
-    -moz-transition: color 0.25s ease-in, background 0.25s ease-in;
-    -o-transition: color 0.25s ease-in, background 0.25s ease-in;
-    transition: color 0.25s ease-in, background 0.25s ease-in
+  min-height:100%;
+  height:auto;
 }
 
-p {
-    line-height: $base-line-height;
+.page-content {
+    min-height:100%;
+    box-sizing: border-box;
+    height:auto;
+    padding-bottom: 140px;/*等于或略大于footer的高度*/
 }
-.module {
-    margin: $spacing-unit;
-    padding: $spacing-unit;
-    position: relative;
-    overflow: hidden;
 
-    img {
-      max-width: 100%;
-      height: auto;
+.site-footer {
+  position: absolute;
+  bottom: 0;
+  padding-bottom: 0rem;
+  width:100%;
+
+  /* footer style */    
+  color: #99999a;
+  background-color: #FAFAFB;
+
+  .left {
+    a {
+      color: #666;
+      border-bottom:1px dotted;
+      text-decoration:none;
     }
-}
-
-.main-content {
-  width: 65%;
-  float:right;
-  padding:0;
-
-  a {
-    color: #d21717;
-    &:hover,
-    &:focus {
-      color: #E40000;
+    a:hover {
+      color:red;
+      border-bottom:1px dotted;
     }
   }
-  .module {
-    margin-left: 0;
-  }
 }
 
 
-/*****************************************************************************/
-/*
-/* Navigation
-/*
-/*****************************************************************************/
+/* Effects
+—————————————————————————————————————————————————— */
 
-nav {
-  a {
-    padding: 0.4em;
-    background: #fff;
-    display:inline-block;
-    &:nth-child(2n) {
-      margin: 10px;
+.blinking_underscore {
+  -webkit-animation: blinking_underscore_frame 1.5s infinite ease;
+  -moz-animation: blinking_underscore_frame 1.5s infinite ease;
+  -ms-animation: blinking_underscore_frame 1.5s infinite ease;
+  -o-animation: blinking_underscore_frame 1.5s infinite ease;
+  animation: blinking_underscore_frame 1.5s infinite ease;
+}
+
+.logo {
+  margin-bottom:12.5px;
+  font-weight:$font-weight-bold;
+}
+.logo a {
+  -webkit-transition:.4s;
+  transition:.4s;
+}
+
+.logo a:hover {
+  color:#222;
+  background-image:-webkit-linear-gradient(bottom,#222,#222);
+  background-image:linear-gradient(to top,#222,#222);
+  text-shadow:-1px -1px 0 #FDFDFD,1px -1px 0 #FDFDFD,-1px 1px 0 #FDFDFD,1px 1px 0 #FDFDFD;
+  background-repeat:repeat-x;
+  background-size:2px 2px;
+  background-position:0 96%
+}
+
+.nav {
+  line-height: $base-line-height;
+
+  .page-link {
+    color: $text-color;
+    line-height: 1.0;
+    display: block;
+    padding: 5px 0px 0px 0px;
+
+
+    li {
+      font-size:1.5rem;
+      list-style:none;
+      font-weight: 100;
+      margin-bottom:1rem;
     }
+
+    a:active {
+      font-weight: 500;
+    }
+  }
+}
+
+/* site-nav */
+
+@include media-query($on-laptop) {
+  .site-nav {
+
+    /* flex box */
+    display: -webkit-box; /* Chrome 4+, Safari 3.1, iOS Safari 3.2+ */
+    display: -moz-box; /* Firefox 17- */
+    display: -webkit-flex; /* Chrome 21+, Safari 6.1+, iOS Safari 7+, Opera 15/16 */
+    display: -moz-flex; /* Firefox 18+ */
+    display: -ms-flexbox; /* IE 10 */
+    display: flex; /* Chrome 29+, Firefox 22+, IE 11+, Opera 12.1/17/18, Android 4.4+ */// Import partials from `sass_dir` (defaults to `_sass`)
+
+    opacity: 0;
+    height: 0;
+    -webkit-transition: all .4s;
+    transition: all .4s;
+
+    -webkit-justify-content: center;
+    justify-content:center;
+
+    @include media-query($on-laptop) {
+      border-top:1px solid #ddd;
+      border-bottom:1px solid #ddd;
+    }
+  }
+  
+  #menu-toggle:checked+.site-nav {
+    opacity: 1;
+    height: auto;
+    margin-bottom:-25px;
+  }
+}
+
+input#menu-toggle {
+  display:none;
+}
+
+.nav .menu-icon {
+  display:none;
+  position:absolute;
+  right:5%;
+
+  @include media-query($on-laptop) {
+    top: 67px;
+
+    @include media-query(400px) {
+      top: 13px;
+    }
+
+    display: block;
+    text-align: center;
+
     &:hover {
-      background: $link-hover;
-      border: 0;
-      color: #fff !important;
-      // for now
-    }
-  }
-  .module {
-    padding-top: $spacing-unit;
-  }
-}
-
-/*****************************************************************************/
-/*
-/* Header
-/*
-/*****************************************************************************/
-
-.main-header {
-    width: 35%;
-    float: left;
-    line-height: 1.7;
-
-    h1 {
-      margin: 0;
-    }
-
-    a {
-      color: #000;
-      font-weight: normal;
-      &:hover,
-      &:focus {
-        color: #000;
+      >svg {
+        path {
+          fill: $grey-color;
+        }
       }
     }
+
+    > svg {
+      width: 18px;
+      height: 15px;
+
+
+      path {
+        fill: $grey-color-dark;
+  } } }
 }
 
-header {
-  background: $blue;
+
+.site-header {
+  text-align:right;
+  @include media-query($on-laptop){
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  nav a {
+    font-weight:400;
+  }
 }
 
-/*****************************************************************************/
-/*
-/* Content
-/*
-/*****************************************************************************/
+.post {
+  @extend .dont-break-out;
+}
 
-article {
-  p {
-    a {
-      border-bottom: .125em solid #ccc;
-      padding: 0 0 .15em 0;
-      display: inline;
-      &:hover {
-        background: $link-hover;
-        border: 0;
-        color: #fff !important;
-      }
+.post-list {
+  
+}
+
+.post_header {
+  margin-bottom:1rem;
+}
+
+.post_title {
+  margin-bottom:0.5rem;
+}
+
+.post_date {
+  color:#888;
+  font-size:1.4rem;
+}
+
+p.readmore {
+  text-align:right;
+}
+
+.post_meta {
+  .author_meta {
+    img {
+      height:24px;
+      width:24px;
     }
   }
 }
 
-time {
-    color: #ccc;
-    position: absolute;
-    top: 0.75em;
-    right: 0.75em;
+.post_archive {
+
 }
 
-hr {
-    height: 1px;
-    border: 0;
-    background: #cccccc;
-    margin: 50px 0;
+.article_meta {
+
 }
 
-pre {
-    background: #f7f7f7;
-    padding: 0.4em;
+.article-content a {
+  border-bottom:1px dotted red;
+  text-decoration:none;
+}
+.article-content a:hover {
+  color:red;
+  border-bottom:1px dotted red;
 }
 
-blockquote {
-    position: relative;
-    border: .1em solid #ddd;
-    border-top-color: #eee;
-    border-bottom-color: #bbb;
-    padding: $spacing-unit;
-    background: #f2f2f2;
-    -webkit-box-shadow: 0 1px 4px #ccc, 0 5px 12px -8px #555;
-    -moz-box-shadow: 0 1px 4px #ccc, 0 5px 12px -8px #555;
-    box-shadow: 0 1px 4px #ccc, 0 5px 12px -8px #555;
+.article-footer {
+
+  padding:2rem 0;
+  border-top:1px solid #ddd;
+  border-bottom:1px solid #ddd;
+
+  .share {
+    text-align:center;
+  }
+
+  .share-link {
+    text-decoration:underline;
+    margin-left:8px;
+  }
+
 }
-/*****************************************************************************/
+
+.article_share {
+
+}
+
+.article_share .location {
+
+}
+
+.artilce-prev {
+
+}
+
+.article-next {
+
+}
+
+/* author info */
+
+
+.author {
+  @media (max-width: $on-laptop) {
+    display:inline-block;
+    text-align:center;
+  }
+}
+
+.authorimage {
+  @media (min-width: $on-laptop+1) {
+    float:left;
+  }
+  display:inline-block;
+  width: 90px;
+  height: 90px;
+  border-radius: 5%;
+  -webkit-background-size: cover !important;
+  background-size: cover !important;
+  background-position: center center !important;
+  margin-right: 10px;
+}
+
+.authorinfo {
+  .bio {
+    color:#999;
+  }
+}
+
+
+
+/* footer */
+
+.footer {
+  float:left;
+}
+
+.left {
+  text-align:center;
+
+  @media (min-width: $on-laptop) {
+    text-align:left;
+  }
+}
+
+.right {
+  text-align:center;
+
+  @media (min-width: $on-laptop) {
+    text-align:right;
+  }
+
+}
+
+/* icon */
+
+.icon {
+  vertical-align: bottom;
+}
+
+body.custom-background {
+  background-image: url('/images/background.png');
+  background-repeat: repeat;
+  background-position: top left;
+  background-attachment: scroll; }
+
+/* Archive page */
+
+.archive_list { 
+  margin-left:5%;
+  width:90%;
+  margin-bottom:3rem;
+}
+
+.category-name {
+  padding-top:20px;
+  text-transform:lowercase;
+  font-variant:small-caps;
+  h2 {
+   letter-spacing:0;
+   border-bottom: 1px solid #ddd;
+  }
+}
+
+div.post_title span.date {
+  font-size: 80%;
+  color: $grey-color;
+}
+
+/* Pagination */
+
+
+.pagination {
+  width:50%;
+}  
+
+.pagination.older-post{
+  float: right;
+  text-align: right;
+}
+
+/* others */
+
+.small-font{
+  font-size:$small-font-size;
+}
+
+/* Media Queries
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
 /*
-/* Responsive
-/*
-/*****************************************************************************/
+Note: The best way to structure the use of media queries is to create the queries
+near the relevant code. For example, if you wanted to change the styles for buttons
+on small devices, paste the mobile query code up in the buttons section and style it
+there.
+*/
 
-@media (max-width: 850px) {
-    body {
-        font-size: large;
-    }
-    .main-header,
-    .main-content {
-        width: 100%;
-        padding: 0.75em;
-    }
-    .main-header .module {
-        margin-left: 0;
-    }
-    .main-content .module {
-        margin-top: 0;
-    }
-    article.module {
-        margin-left: 1.5em;
-        margin-right: 0;
-    }
-    nav {
-        text-align: center;
-    }
-    nav br {
-        display: none;
-    }
-    nav a {
-        margin: 0 0.75em;
-    }
+/* Larger than mobile */
+@media (min-width: 400px) {}
+
+/* Larger than phablet (also point when grid becomes active) */
+@media (min-width: 550px) {
+}
+
+/* Larger than tablet */
+@media (min-width: 750px) {}
+
+/* Larger than desktop */
+@media (min-width: 1000px) {}
+
+/* Larger than Desktop HD */
+@media (min-width: 1200px) {}
+
+/* Smaller than tablet */
+@media (max-width: 750px) {}
+
+/* Smaller than tablet */
+@media (max-width: 550px) {}
+
+
+/* ------------------------------------
+ * frames
+ * ------------------------------------ */
+
+@keyframes "blinking_underscore_frame" {
+ 0% {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+   	filter: alpha(opacity=0);
+   	opacity: 0;
+ }
+ 50% {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+   	filter: alpha(opacity=100);
+   	opacity: 1;
+ }
+ 100% {
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+   	filter: alpha(opacity=0);
+   	opacity: 0;
+ }
+
+}
+
+@-moz-keyframes blinking_underscore_frame {
+ 0% {
+   filter: alpha(opacity=0);
+   opacity: 0;
+ }
+ 50% {
+   filter: alpha(opacity=100);
+   opacity: 1;
+ }
+ 100% {
+   filter: alpha(opacity=0);
+   opacity: 0;
+ }
+
+}
+
+@-webkit-keyframes "blinking_underscore_frame" {
+ 0% {
+   filter: alpha(opacity=0);
+   opacity: 0;
+ }
+ 50% {
+   filter: alpha(opacity=100);
+   opacity: 1;
+ }
+ 100% {
+   filter: alpha(opacity=0);
+   opacity: 0;
+ }
+
+}
+
+@-ms-keyframes "blinking_underscore_frame" {
+ 0% {
+   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+   filter: alpha(opacity=0);
+   opacity: 0;
+ }
+ 50% {
+   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+   filter: alpha(opacity=100);
+   opacity: 1;
+ }
+ 100% {
+   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+   filter: alpha(opacity=0);
+   opacity: 0;
+ }
+}
+
+@-o-keyframes "blinking_underscore_frame" {
+ 0% {
+   filter: alpha(opacity=0);
+   opacity: 0;
+ }
+ 50% {
+   filter: alpha(opacity=100);
+   opacity: 1;
+ }
+ 100% {
+   filter: alpha(opacity=0);
+   opacity: 0;
+ }
 }
