--- a/_includes/author.html
+++ b/_includes/author.html
@@ -1,9 +1,9 @@
 <section class="author">
-  <div class="authorimage box" style="background: url({{site.baseurl}}/assets/img/Taffy.jpg)"></div>
+  <div class="authorimage box" style="background: url({{site.baseurl}}/assets/img/img.jpg)"></div>
   <div class="authorinfo box">
-    <p>Author |Zhu</p>
+    <p>Owner |hhZhu</p>
     <p class="bio">
-      Currently a Ph.D. student in Singapore University of Technology and Design in the area of Human-Computer Interaction(HCI).
+      Currently a undergraduate student in the Department of Precise Instrument.
     </p>
   </div>
 </section>
