--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
-  {% include head.html %}
-  <body>
-    <div class="page-content">
-      <div class="container">
-        <div class="three columns">
-          {% include header.html %}
-        </div>
+{% include head.html %}
 
-        <div class="nine columns" style="z-index:100;">
-          <div class="wrapper">
-            {{ content }}
-          </div>
+<body>
+  <div class="page-content">
+    <div class="container">
+      <div class="three columns">
+        <script type="text/javascript" async
+          src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+          </script>
+        {% include header.html %}
+      </div>
+
+      <div class="nine columns" style="z-index:100;">
+        <div class="wrapper">
+          {{ content }}
         </div>
       </div>
-      {% include footer.html %} 
     </div>
-  </body>
+    {% include footer.html %}
+  </div>
+</body>
+
 </html>
