--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
 <header class="site-header">
-  <script type="text/javascript" async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
-  </script>
+
   <h2 class="logo"><a href="{{ site.baseurl }}/">{{ site.title }}</a></h2>
 
   <div class="nav">
@@ -30,4 +29,17 @@
     </div>
 
   </div>
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
+  </script>
+  <script type="text/x-mathjax-config">
+   MathJax.Hub.Config({tex2jax: {
+          inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+          processEscapes: true
+        }
+      });
+ </script>
+
+  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+  </script>
 </header>
