--- a/css/main.scss
+++ b/css/main.scss
@@ -30,6 +30,17 @@ $content-width:    800px;
 
 $on-palm:          550px;
 $on-laptop:        780px;
+table{
+  border-left:1px solid #000000;border-top:1px solid #000000;
+  width: 100%;
+  word-wrap:break-word; word-break:break-all;
+}
+table th{
+text-align:center;
+}
+table th,td{
+  border-right:1px solid #000000;border-bottom:1px solid #000000;
+}
 
 
 
