--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,4 +31,17 @@
 
   <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
   </script>
+  <style>
+	  table{
+	    border-left:1px solid #000000;border-top:1px solid #000000;
+	    width: 100%;
+	    word-wrap:break-word; word-break:break-all;
+	  }
+	  table th{
+	  text-align:center;
+	  }
+	  table th,td{
+	    border-right:1px solid #000000;border-bottom:1px solid #000000;
+	  }
+</style>
 </head>
