--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,8 @@
   </script>
   <script type="text/x-mathjax-config">
    MathJax.Hub.Config({tex2jax: {
-          inlineMath: [ ['$','$'], ["\\(","\\)"],["$$","$$"]],
+          inlineMath: [ ['$','$'], ["\\(","\\)"]],
+          displayMath:["$$","$$"],
           processEscapes: true
         }
       });
