--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,8 +40,7 @@
    MathJax.Hub.Config({tex2jax: {
           inlineMath: [ ['$','$'], ["\\(","\\)"]],
           displayMath:["$$","$$"],
-        });
-          processEscapes: true
+          processEscapes: true,
         }
       });
  </script>
