--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,36 +18,28 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
     href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-    <style>
-      table{
-        border-left:1px solid #000000;border-top:1px solid #000000;
-        width: 100%;
-        word-wrap:break-word; word-break:break-all;
-      }
-      table th{
-      text-align:center;
-      }
-      table th,td{
-        text-align:center;
-        border-right:1px solid #000000;border-bottom:1px solid #000000;
-      }
+  <style>
+    table {
+      border-left: 1px solid #000000;
+      border-top: 1px solid #000000;
+      width: 100%;
+      word-wrap: break-word;
+      word-break: break-all;
+    }
+
+    table th {
+      text-align: center;
+    }
+
+    table th,
+    td {
+      text-align: center;
+      border-right: 1px solid #000000;
+      border-bottom: 1px solid #000000;
+    }
   </style>
-  
-  <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-        TeX: {
-            equationNumbers: {
-                autoNumber: "AMS"
-            }
-        },
-        tex2jax: {
-            inlineMath: [ ['$','$'] ],
-            displayMath: [ ['$$','$$'] ],
-            processEscapes: true,
-        }
-    });
-    </script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
-    </script>
- 
+  {% unless page.no_latex %}
+  {% include tex.html %}
+  {% endunless %}
+
 </head>
