--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,8 +38,22 @@
       border-bottom: 1px solid #000000;
     }
   </style>
-  {% unless page.no_latex %}
-  {% include tex.html %}
-  {% endunless %}
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+        TeX: {
+            equationNumbers: {
+                autoNumber: "AMS"
+            }
+        },
+        tex2jax: {
+            inlineMath: [ ['$','$'] ],
+            displayMath: [ ['$$','$$'] ],
+            processEscapes: true,
+        }
+    });
+    </script>
+<script type="text/javascript"
+    src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+    </script>
 
 </head>
