--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,8 +38,18 @@
       border-bottom: 1px solid #000000;
     }
   </style>
-  {% unless page.no_latex %}
-  {% include latex.html %}
-  {% endunless %}
+  <script type="text/x-mathjax-config">
+  MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
+</script>
+  <script type="text/x-mathjax-config">
+ MathJax.Hub.Config({tex2jax: {
+        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+        displayMath:["$$","$$"],try
+        processEscapes: true
+      }
+    });
+</script>
 
+  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+  </script>
 </head>
