--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,7 +44,7 @@
   <script type="text/x-mathjax-config">
  MathJax.Hub.Config({tex2jax: {
         inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-        displayMath:["$$","$$"],try
+        displayMath:["$$","$$"],
         processEscapes: true
       }
     });
