--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,7 @@
     }
   </style>
   <script type="text/x-mathjax-config">
-  MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "displayMath" } } }); 
+  MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: displayMath } } }); 
 </script>
   <script type="text/x-mathjax-config">
  MathJax.Hub.Config({tex2jax: {
