--- a/_includes/tex.html
+++ b/_includes/tex.html
@@ -1,10 +1,10 @@
 <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
-        TeX: {
+        <!-- TeX: {
             equationNumbers: {
                 autoNumber: "AMS"
             }
-        },
+        }, -->
         tex2jax: {
             inlineMath: [ ['$','$'] ],
             displayMath: [ ['$$','$$'] ],
