--- a/_includes/tex.html
+++ b/_includes/tex.html
@@ -1,4 +1,4 @@
-<script type="text/x-mathjax-config">
+<!-- <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         <!-- TeX: {
             equationNumbers: {
@@ -11,7 +11,7 @@
             <!-- processEscapes: true, -->
         }
     });
-    </script>
+    </script> -->
 <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
