--- a/_includes/tex.html
+++ b/_includes/tex.html
@@ -1,17 +1,17 @@
-<!-- <script type="text/x-mathjax-config">
+<script type="text/x-mathjax-config">
     MathJax.Hub.Config({
-        <!-- TeX: {
+        TeX: {
             equationNumbers: {
                 autoNumber: "AMS"
             }
-        }, -->
+        },
         tex2jax: {
             inlineMath: [ ['$','$'] ],
             displayMath: [ ['$$','$$'] ],
-            <!-- processEscapes: true, -->
+            processEscapes: true,
         }
     });
-    </script> -->
+    </script>
 <script type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
     </script>
