--- a/_includes/author.html
+++ b/_includes/author.html
@@ -3,7 +3,7 @@
   <div class="authorinfo box">
     <p>Owner |hhZhu</p>
     <p class="bio">
-      Currently a undergraduate student in the Department of Precise Instrument.
+      Currently a undergraduate student in the Department of Precise Instrument.E-mail：ishonghua.zhu@outlook.com
     </p>
   </div>
 </section>
