--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,21 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
     href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-  {% unless page.no_latex %}
+  <!-- {% unless page.no_latex %}
   {% include tex.html %}
-  {% endunless %}
+  {% endunless %} -->
+  <script type="text/x-mathjax-config"> 
+    MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
+  </script>
+ <script type="text/x-mathjax-config">
+   MathJax.Hub.Config({tex2jax: {
+          inlineMath: [ ['$','$'], 
+          displayMath: [ ['$$','$$'] ],
+          processEscapes: true
+        }
+      });
+ </script>
+ 
+ <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
+ </script>
 </head>
