--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,8 @@
 <head>
-  <meta charset="utf-8">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.css" integrity="sha384-wITovz90syo1dJWVh32uuETPVEtGigN07tkttEqPv+uR2SE/mbQcG7ATL28aI9H0" crossorigin="anonymous">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.7.1/katex.min.js" integrity="sha384-/y1Nn9+QQAipbNQWU65krzJralCnuOasHncUFXGkdwntGeSvQicrYkiUBwsgUqc1" crossorigin="anonymous"></script>
+ 
+<meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,7 +24,7 @@
   <!-- {% unless page.no_latex %}
   {% include tex.html %}
   {% endunless %} -->
-  <script type="text/x-mathjax-config"> 
+  <!-- <script type="text/x-mathjax-config"> 
     MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
   </script>
  <script type="text/x-mathjax-config">
@@ -34,5 +37,5 @@
  </script>
  
  <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
- </script>
+ </script> -->
 </head>
