--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+  <script>
+    $("script[type='math/tex']").replaceWith(function() {
+        var tex = $(this).text();
+        return katex.renderToString(tex, {displayMode: false});
+    });
+  
+    $("script[type='math/tex; mode=display']").replaceWith(function() {
+        var tex = $(this).html();
+        return katex.renderToString(tex.replace(/%.*/g, ''), {displayMode: true});
+    });
+  </script>
   <body>
     <div class="page-content">
       <div class="container">
@@ -16,5 +27,6 @@
       </div>
       {% include footer.html %} 
     </div>
+
   </body>
 </html>
