--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,5 @@
 <head>
- 
-<meta charset="utf-8">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,21 +18,8 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
     href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
   {% unless page.no_latex %}
   {% include tex.html %}
   {% endunless %}
-  <!-- <script type="text/x-mathjax-config"> 
-    MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); 
-  </script>
- <script type="text/x-mathjax-config">
-   MathJax.Hub.Config({tex2jax: {
-          inlineMath: [ ['$','$'], 
-          displayMath: [ ['$$','$$'] ],
-          processEscapes: true
-        }
-      });
- </script>
- 
- <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript">
- </script> -->
 </head>
