--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,8 +27,8 @@
         tex2jax: {
         skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
         inlineMath: [['$','$']]，
-        displayMath: [ ['$$', '$$']], 
-        processEscapes: true, 
+        <!-- displayMath: [ ['$$', '$$']], 
+        processEscapes: true,  -->
         }
     });
 </script>
