--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,19 +18,19 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
     href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
-    <!-- <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
   {% unless page.no_latex %}
   {% include tex.html %}
-  {% endunless %} -->
-  <script type="text/x-mathjax-config">
+  {% endunless %}
+  <!-- <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         tex2jax: {
         skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
         inlineMath: [['$','$']]，
-        <!-- displayMath: [ ['$$', '$$']], 
-        processEscapes: true,  -->
+         displayMath: [ ['$$', '$$']], 
+        processEscapes: true,
         }
     });
 </script>
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script> -->
 </head>
