--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,9 +19,9 @@
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}"
     href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
-  {% unless page.no_latex %}
+  <!-- {% unless page.no_latex %} -->
   {% include tex.html %}
-  {% endunless %}
+  <!-- {% endunless %} -->
   <!-- <script type="text/x-mathjax-config">
     MathJax.Hub.Config({
         tex2jax: {
