--- a/themes/anubis/assets/css/dark.css
+++ b/themes/anubis/assets/css/dark.css
@@ -12,8 +12,8 @@
 --nav-bg-color: #242424;
 --nav-link-color: #b6b6b6;
 
---pre-color: #f8f8f2;
---pre-bg-color: #272822;
+--pre-color: #333;
+--pre-bg-color: #ddd;
 
 --bq-color: #ccc;
 --hr-color: #333;
