--- a/themes/anubis/assets/css/light.css
+++ b/themes/anubis/assets/css/light.css
@@ -13,8 +13,8 @@
     --nav-bg-color: #fafafa;
     --nav-link-color: #696969;
 
-    --pre-color: #f8f8f2;
-    --pre-bg-color: #272822;
+    --pre-color: #333;
+    --pre-bg-color: #ddd;
 
     --bq-color: #ccc;
     --hr-color: #ccc;
