读书笔记+archives完善

--- a/themes/PaperModX/layouts/_default/archives.html
+++ b/themes/PaperModX/layouts/_default/archives.html
@@ -9,7 +9,11 @@
   {{- end }}
 </header>
 
-{{- $pages := where site.AllPages "Type" "in" site.Params.mainSections }}
+{{- $pages := where site.RegularPages "Type" "in" site.Params.mainSections }}
+
+{{- if site.Params.ShowAllPagesInArchive }}
+{{- $pages = site.RegularPages }}
+{{- end }}
 
 {{- range $pages.GroupByPublishDate "2006" }}
 {{- if ne .Key "0001" }}
