--- a/themes/PaperModX/layouts/partials/extend_footer.html
+++ b/themes/PaperModX/layouts/partials/extend_footer.html
@@ -1,24 +1,48 @@
 {{- /* Footer custom content area start */ -}} {{- /* Insert any custom code
-    web-analytics, resources, etc. here */ -}}
-    <script
-        type="text/javascript"
-        src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
-    ></script>
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-          tex2jax: {
-            inlineMath: [['$','$']],
-            displayMath: [['$$','$$']],
-            processEscapes: true,
-            processEnvironments: true,
-            skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-            TeX: { equationNumbers: { autoNumber: "AMS" },
-                 extensions: ["AMSmath.js", "AMSsymbols.js"] }
-          }
-        });
-    </script>
-    
-    <!-- <script type="text/x-mathjax-config">
+web-analytics, resources, etc. here */ -}}
+<!-- <script
+  type="text/javascript" id="MathJax-script" async
+  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+></script>
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [['$','$']],
+      displayMath: [['$$','$$']],
+      processEscapes: true,
+      processEnvironments: true,
+      skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+      TeX: { equationNumbers: { autoNumber: "AMS" },
+           extensions: ["AMSmath.js", "AMSsymbols.js"] }
+    }
+  });
+</script> -->
+<script>
+  MathJax = {
+    tex: {
+      inlineMath: [["$", "$"]],
+      displayMath: [["$$", "$$"]],
+      processEscapes: true,
+      processEnvironments: true,
+      skipTags: ["script", "noscript", "style", "textarea", "pre"],
+      TeX: {
+        equationNumbers: { autoNumber: "AMS" },
+        extensions: ["AMSmath.js", "AMSsymbols.js"],
+      },
+    },
+    svg: {
+      fontCache: "global",
+    },
+  };
+</script>
+<script
+  type="text/javascript"
+  id="MathJax-script"
+  async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"
+></script>
+
+<!-- <script type="text/x-mathjax-config">
           MathJax.Hub.Queue(function() {
             // Fix <code> tags after MathJax finishes running. This is a
             // hack to overcome a shortcoming of Markdown. Discussion at
@@ -29,6 +53,5 @@
             }
         });
     </script> -->
-    
-    {{- /* Footer custom content area end */ -}}
-    
+
+{{- /* Footer custom content area end */ -}}
